--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ baseurl = "https://libmb.github.io"
 languageCode = "en-us"
 title = "Shelters House"
 theme = "hugo_theme_robust"
+canonifyurls = true
 
 [author]
   name = "Shelter B"
