Create an empty file in WERCKER_OUTPUT_DIR so that wercker doesn't try to save the entire build directory as an artifact

--- a/wercker.yml
+++ b/wercker.yml
@@ -22,3 +22,7 @@ build:
           git add -A
           git commit --allow-empty -m "$MESSAGE"
           git push
+    - script:
+        name: touch artifact file
+        code: |
+          touch $WERCKER_OUTPUT_DIR/$WERCKER_MAIN_PIPELINE_STARTED
