--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@
   theme = "hugo-future-imperfect"
   preserveTaxonomyNames = true
   paginate = 3
-  disqusShortname = "shortname"
+  disqusShortname = ""
   googleAnalytics = ""
 
   [params]
