--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@
   title = "Shelter's House"
   theme = "hugo-future-imperfect"
   preserveTaxonomyNames = true
-  paginate = 3
+  paginate = 5
   disqusShortname = ""
   googleAnalytics = ""
 
@@ -24,7 +24,7 @@
       # The set of favicons used are based on the write-up from this link:
       # https://github.com/audreyr/favicon-cheat-sheet
       # Please see the favicon partial template for more information
-      loadFavicon          = false
+      loadFavicon          = true
       faviconVersion       = ""
 
       # Load custom CSS or JavaScript files. This replaces the deprecated params
