Update config username

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-  baseurl = "https://libmb.github.io/"
+  baseurl = "https://mihshhehl.github.io/"
   languageCode = "en-us"
   title = "Shelter's House"
   theme = "hugo-future-imperfect"
