--- a/config.toml
+++ b/config.toml
@@ -86,7 +86,7 @@
   # socialAppearAtTop or socialAppearAtBottom is set to true in the params area
   # The social media icons will appear on the sidebar
   [social]
-      github          = "libmb"
+      github          = "mihshhehl"
       bitbucket       = ""
       jsfiddle        = ""
       codepen         = ""
@@ -95,7 +95,7 @@
       deviantart      = ""
       behance         = ""
       flickr          = ""
-      instagram       = "lib_mb"
+      instagram       = "mihshhehl"
       youtube         = ""
       vimeo           = ""
       vine            = ""
@@ -109,8 +109,8 @@
       reddit          = ""
       pinterest       = ""
       googleplus      = ""
-      facebook        = "librarianmb"
+      facebook        = ""
       facebook_admin  = ""
       twitter_domain  = ""
-      twitter         = "lib_mb"
+      twitter         = "mihshhehl"
       email           = ""
