--- a/config.toml
+++ b/config.toml
@@ -42,170 +42,12 @@ disqusShortname = ""
 	subtitle404 = ""
 
 	# Choose a font for the social icons in the footer. Either "mono-social" or "font-awesome"
-	iconFont = "mono-social"
+	iconFont = "font-awesome"
     # The social icons can be styled differently if you use mono as font - circle, rounded, or empty
     socialIconStyle = "circle"
 
 # Add additional social link entries underneath
 [social]
-    twitter  = "https://www.twitter.com/mihshhehl"
-    github   = "https://www.github.com/mihshhehl"
-
-
-
-
-# title = "Shelter's House"
-# baseURL = "https://mihshhehl.github.io/"
-# tags = ["portfolio", "web design", "blog"]
-# languageCode = "en-US"
-# config = "config.toml"
-# theme = "osprey"
-# canonifyURLS = true
-# googleAnalytics = ""
-#
-# [Params]
-#     author = "Michelle Bergquist"
-#     description = "Librarian gone Developer in Denver CO!"
-#     logoBig = "/images/logo.png"
-#     logoSmall = "/images/logo.png"
-#     favicon = "favicon.ico"
-#     opengraphImage = "/images/logo.png"
-#     twitter = "mihshhehl"
-#     linkedin = "mihshhehl"
-#     github = "mihshhehl"
-#     email = "contact@mihshhehl.com"
-#     googleTagManger = ""
-#     highlightJS = true
-#     copyright = true
-#     credit = true
-#
-# [[menu.main]]
-#     name = "Work"
-#     url  = "/#work"
-#     weight = 1
-# [[menu.main]]
-#     name = "Blog"
-#     url  = "/#blog"
-#     weight = 2
-# [[menu.main]]
-#     name = "Contact"
-#     url  = "/#contact"
-#     weight = 3
-
-
-  # baseurl = "https://mihshhehl.github.io/"
-  # languageCode = "en-us"
-  # title = "Shelter's House"
-  # theme = "hugo-future-imperfect"
-  # preserveTaxonomyNames = true
-  # paginate = 5
-  # disqusShortname = ""
-  # googleAnalytics = ""
-  #
-  # [params]
-  #     # Sets the meta tag description, usually reserved for the main page
-  #     description          = "A lifestyle blog"
-  #     # This will appear on the top left of the navigation bar
-  #     navbarTitle          = "Shelter's House"
-  #     # Social media buttons that appear on the sidebar
-  #     socialAppearAtTop    = true
-  #     socialAppearAtBottom = true
-  #     # set this to the section name if section is not post
-  #     viewMorePostLink     = "/blog/"
-  #
-  # # Optional Params
-  #     categoriesByCount    = true
-  #     includeReadingTime   = true
-  #     # The set of favicons used are based on the write-up from this link:
-  #     # https://github.com/audreyr/favicon-cheat-sheet
-  #     # Please see the favicon partial template for more information
-  #     loadFavicon          = true
-  #     faviconVersion       = ""
-  #
-  #     # Load custom CSS or JavaScript files. This replaces the deprecated params
-  #     # minifiedFilesCSS and minifiedFilesJS. The variable is an array so that you
-  #     # can load multiple files if necessary. You can also load the standard theme
-  #     # files by adding the value, "default".
-  #     # customCSS            = ["default", "/path/to/file"]
-  #     # customJS             = ["default", "/path/to/file"]
-  #
-  #     # Loading min files for exampleSite
-  #     customCSS            = ["/css/main.min.css"]
-  #     customJS             = ["/js/main.min.js"]
-  #
-  # # parms.intro will appear on the sidebar
-  # # This is optional, but it's suggested to use
-  # [params.intro]
-  #     header    = "Shelter's House"
-  #
-  #     paragraph = "A lifestyle blog<i class='fa fa-hand-peace-o'></i>"
-  #
-  #     about     = "Web Dev in training | Based in Denver | Married with one dog"
-  #
-  # # This will also appear on the sidebar.
-  # # A width of less than 100px is recommended
-  # # This is optional
-  # [params.intro.pic]
-  #     src       = "/images/logo.png"
-  #     # modify your picture in the shape of a circle or
-  #     # future imperfect's hexagonal shape
-  #     circle    = false
-  #     imperfect = false
-  #     width     = "90px"
-  #     alt       = "house logo"
-  #
-  # # Adjust the amount of recent posts on the sidebar.
-  # # This is optional. The default value 5 will be used
-  # [params.postAmount]
-  #     sidebar = 5
-  #
-  # # Set up your menu items in the navigation bar
-  # # You can use identifier to prepend a font awesome icon to your text
-  # [[menu.main]]
-  #     name = "Blog"
-  #     url = "/post"
-  #     identifier = "fa fa-newspaper-o"
-  #     weight = 1
-  #
-  # [[menu.main]]
-  #     name = "Categories"
-  #     url = "/categories"
-  #     weight = 2
-  #
-  # [[menu.main]]
-  #     name = "About"
-  #     url = "/about"
-  #     weight = 3
-  #
-  # # Insert your username and the icon will apear on the page as long as
-  # # socialAppearAtTop or socialAppearAtBottom is set to true in the params area
-  # # The social media icons will appear on the sidebar
-  # [social]
-  #     github          = "mihshhehl"
-  #     bitbucket       = ""
-  #     jsfiddle        = ""
-  #     codepen         = ""
-  #     foursquare      = ""
-  #     dribbble        = ""
-  #     deviantart      = ""
-  #     behance         = ""
-  #     flickr          = ""
-  #     instagram       = "mihshhehl"
-  #     youtube         = ""
-  #     vimeo           = ""
-  #     vine            = ""
-  #     medium          = ""
-  #     wordpress       = ""
-  #     tumblr          = ""
-  #     xing            = ""
-  #     linkedin        = "michelle-bergquist-5a936860"
-  #     slideshare      = ""
-  #     stackoverflow   = ""
-  #     reddit          = ""
-  #     pinterest       = ""
-  #     googleplus      = ""
-  #     facebook        = ""
-  #     facebook_admin  = ""
-  #     twitter_domain  = ""
-  #     twitter         = "mihshhehl"
-  #     email           = ""
+    twitter-square  = "https://www.twitter.com/mihshhehl"
+    github-square   = "https://www.github.com/mihshhehl"
+		linkedin-square = "https://www.linkedin.com/mihshhehl"
