--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseurl = "blog.mihshhehl.com"
+baseurl = "https://blog.mihshhehl.com"
 themesDir = "./themes"
 languageCode = "en-us"
 title = "Shelter's House"
