fix LinkedIn URL

--- a/config.toml
+++ b/config.toml
@@ -50,4 +50,4 @@ disqusShortname = ""
 [social]
     twitter-square  = "https://www.twitter.com/mihshhehl"
     github-square   = "https://www.github.com/mihshhehl"
-		linkedin-square = "https://www.linkedin.com/mihshhehl"
+		linkedin-square = "https://www.linkedin.com/in/mihshhehl"
